--- a/public/css/global.css
+++ b/public/css/global.css
@@ -1,7 +1,7 @@
 * {box-sizing: border-box}
 
 /* Full-width input fields */
-  input[type=text], input[type=password] {
+input[type=text], input[type=password] {
   width: 100%;
   padding: 15px;
   margin: 5px 0 22px 0;
@@ -17,6 +17,7 @@ input[type=text]:focus, input[type=password]:focus {
 
 h1 {
   font: 700 26px 'Poppins', sans-serif;
+  text-align: center;
 }
 
 p, label, button, span {
@@ -29,7 +30,7 @@ hr {
 }
 
 /* Set a style for all buttons */
-button {
+button, input[type=submit] {
   background-color: #04AA6D;
   color: white;
   padding: 14px 20px;
@@ -44,11 +45,21 @@ button:hover {
   opacity:1;
 }
 
+a {
+  color: #2196f3;
+  text-decoration: none;
+}
+
 /* Add padding to container elements */
 .container {
   padding: 16px;
   margin: 0 auto;
   max-width: 700px;
+}
+
+.footer{
+  display: flex;
+  justify-content: space-between;
 }
 
 /* Change styles for cancel button and signup button on extra small screens */
