--- a/public/views/forgot-password.html
+++ b/public/views/forgot-password.html
@@ -8,26 +8,21 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Roboto:wght@400;500&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="/css/global.css">
-  <title>Cadastro</title>
+  <title>Recuperar senha</title>
 </head>
 
 <body>
   <div class="container">
-    <form action="/users" method="POST">
-      <h1>Cadastro de usuário</h1>
-      <p>Por favor, preecha esse formulário para criar sua conta.</p>
+    <form action="/reset-password" method="POST">
+      <h1>Recuperar senha</h1>
+      <p>Por favor, preecha esse formulário com o seu email para recuperar sua senha.</p>
+      <p>Todas as instruções serão enviadas para o seu email.</p>
       <hr>
-      <label for="name"><b>Nome de usuário</b></label>
-      <input type="text" placeholder="username" name="username" required>
 
       <label for="email"><b>Email</b></label>
       <input type="text" placeholder="example@mail.com" name="email" required>
 
-      <label for="psw"><b>Senha</b></label>
-      <input type="password" placeholder="Coloque a senha" name="password" required>
-
-      <button type="submit" class="signupbtn">Criar conta</button>
-      <span>Já tem uma conta? <a href="/login">entrar na conta</a></span>
+      <button type="submit" class="signupbtn">Enviar email</button>
     </form>
   </div>
 </body>
