--- a/public/views/login.html
+++ b/public/views/login.html
@@ -7,13 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Roboto:wght@400;500&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="/css/login.css">
+  <link rel="stylesheet" href="/css/global.css">
   <title>Cadastro</title>
 </head>
 
 <body>
   <div class="container">
-    <form action="/users">
+    <form action="/users" method="POST">
       <h1>Entrar na conta</h1>
       <p>Por favor, preecha esse formulário para entrar na sua conta.</p>
       <hr>
@@ -25,8 +25,10 @@
       <input type="password" placeholder="Coloque a senha" name="psw" required>
 
       <button type="submit" class="signupbtn">Entrar</button>
-
-      <span>Não tem uma conta? <a href="/cadastro">criar conta</a></span>
+      <div class="footer">
+        <span>Não lembra da senha? <a href="/forgot-password">recuperar senha</a></span>
+        <span>Não tem uma conta? <a href="/cadastro">criar conta</a></span>
+      </div>
     </form>
   </div>
 </body>
