--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,7 +4,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
 }
 
-#form {
+/* #form {
   background: rgba(0, 0, 0, 0.15);
   padding: 0.25rem;
   position: fixed;
@@ -37,18 +37,102 @@ body {
   border-radius: 3px;
   outline: none;
   color: #fff;
+} */
+
+.container {
+  padding: 16px;
+  margin: 0 auto;
+  max-width: 700px;
 }
 
-#messages {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
+.user_right {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
 
-#messages>li {
-  padding: 0.5rem 1rem;
+.user_left {
+  display: flex;
+  flex-direction: column;
+  align-content: flex-start;
 }
 
-#messages>li:nth-child(odd) {
-  background: #efefef;
+/* User sender */
+.user_sender {
+  display: flex;
+  flex-direction: column;
+
+  background-color: #993399;
+  color: #fff;
+  text-align: end;
+
+  padding: 15px 10px;
+  margin: 10px 0;
+  
+  width: 250px;
+  border-radius: 4px;
+  line-height: 20px;
+}
+
+.user_sender .name {
+  text-align: end;
+  margin-bottom: 5px;
+  margin-top: -10px;
+}
+
+/* User receiver */
+.user_receiver {
+  display: flex;
+  flex-direction: column;
+
+  background: #f2ecfa;
+  text-align: left;
+
+  padding: 15px 10px;
+  margin: 10px 0;
+
+  width: 250px;
+  border-radius: 4px;
+  line-height: 20px;
+}
+
+.user_receiver .name {
+  text-align: start;
+  margin-bottom: 5px;
+  margin-top: -10px;
+}
+
+/* Send Message */
+.message_send {
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  border: 1px solid #cec9c9;
+  align-items: center;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  max-width: 700px;
+
+  /* background: rgba(0, 0, 0, 0.15); */
+  padding: 0.25rem;
+  height: 3rem;
+  box-sizing: border-box;
+  backdrop-filter: blur(10px);
+}
+
+.message_send input {
+  outline: none;
+  height: 34px;
+  align-items: center;
+  width: 90%;
+
+  border: none;
+}
+
+.send_message_button {
+  display: flex;
+  cursor: pointer;
+  margin: auto;
 }
