feat: chat interface 2.0

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -11,24 +11,12 @@
 
 <body>
   <div class="container">
-    <!-- <script id="sender-template" type="text/template"> -->
-    <div class="user_right">
-      <div class="user_sender">
-        <span class="name">{{name}}</span>
-        <span class="sender message">
-          {{message}}Eae
-          <!-- <label class="date">{{date}}</label> -->
-        </span>
-      </div>
-    </div>
-    <!-- </script> -->
-
     <!-- <script id="receiver-template" type="text/template"> -->
     <div class="user_left">
       <div class="user_receiver">
-        <span class="name">{{name}}</span>
+        <span class="name">{name}</span>
         <span class="receiver message">
-          {{message}}ola galera
+          ola galera
         </span>
         <!-- <label class="date">{{date}}</label> -->
       </div>
