--- a/public/css/style.css
+++ b/public/css/style.css
@@ -64,7 +64,7 @@ body {
 
   background-color: #993399;
   color: #fff;
-  text-align: end;
+  text-align: start;
 
   padding: 15px 10px;
   margin: 10px 0;
